# generalized-walnuts

./: .gitignore  CITATION.cff  LICENSE  LISTINGS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
gwalnuts/: __init__.py  diagnostics.py  engine.py  grid.py  targets.py  tuning.py
tests/: test_grid.py  test_invariance.py  test_units.py
