[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gwalnuts"
version = "1.0.0"
description = "Generalized WALNUTS: measure-preserving flows and initial-point-symmetric first-return stopping rules (companion code)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nawaf Bou-Rabee" },
    { name = "Bob Carpenter" },
    { name = "Tore Selland Kleppe" },
]
keywords = ["MCMC", "HMC", "NUTS", "WALNUTS", "isokinetic", "Bayesian inference"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
gwalnuts-grid = "gwalnuts.grid:main"

[tool.setuptools.packages.find]
include = ["gwalnuts*"]

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (full invariance suite, grid smoke run)",
]
testpaths = ["tests"]
